- Support for Android 13 (API 33) - public transport enabler library updated (2022-09-24): Repairs the inaccessible VVO provider